<?xml version="1.0"?>
<package format="3">
  <name>vision_guard</name>
  <version>0.0.1</version>
  <description>Vision Guard - ROS2 object detection and tracking</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_guard_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>